# foglamp-south-image-classifier

./: CMakeLists.txt  FindFogLAMP.cmake  LICENSE  README.md  README.rst  README_QUICK_START.rst  classifier.cpp  make_deb  plugin.cpp
include/: classifier.h
models/: digit_recognition.tflite  digit_recognition_CNN.tflite  eval.py  gen_model.py
